# fastagentic

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: advanced-tests.yml  ci.yml  release.yml
.hypothesis/constants/: 0a93622d4fcede00  0bf69e61978b0bea  0ce75dfe6bac69bd  0d82ca2104b153f3  107de4a604b85fb5  12080e37d93b28e3  124ae76a6ec92f92  1512e56aa20965db  1b29d58f41c613c6  1f5dada04c0ab0a1  26afc2d22de57422  2c63565e3c929080  321006b0b668025d  329079b1c94f627a  34b6b12ab09cf9b6  36294447770a18c8  3700747fd8e685d5  44a523235f7b5243  46f6e555e4c12955  5163b9788574e240  52cc7cd61134bb03  539bdfce3836e8c4  53f530a6a9638196  5917555b00df7a5a  5b65f866f045471f  5bbf2a419e1d5016  5c4ed743fc41ca93  5fffd42a7fc2a16c  608de927826be66f  63bec4af77001e11  64dabd17f5fa4dc5  6623c5f429e1d3ca  696139f4f5bb1a1f  69d1af8840f00523  6df7cd20bd1ef882  6ee0f68a273632a5  762732259dcd75f8  769fad294b20c220  77796c8d2e128f8e  79b8ebaaf0957a62  (+38 more)
.hypothesis/examples/04e6b3400353b141/: 8b667c53dca47e00  9db3081a891ba1f8  d3e851f671055eaa  d9b707b41ac57828
charts/: README.md
charts/runtime/: Chart.yaml  values.yaml
charts/runtime/templates/: NOTES.txt  _helpers.tpl  (+4 more)
docs/: architecture.md  cli-reference.md  decorators.md  getting-started.md  roadmap.md  security.md
docs/adapters/: autogen.md  comparison.md  crewai.md  dspy.md  index.md  langchain.md  llamaindex.md  pydanticai.md  semantic_kernel.md
docs/protocols/: mcp.md
docs/reference/: github-a2a.json  mcp-2025-06-18.html  mcp-authorization.html
documentation/: mkdocs.yml
documentation/docs/: hooks.md  memory.md  reliability.md  roadmap.md  templates-ecosystem.md
examples/: README.md
examples/autogen-coding/: .env.example  CLAUDE.md  README.md  app.py  pyproject.toml
examples/crewai-multi-agent/: pyproject.toml
examples/deep-research/: CLAUDE.md  README.md  agent.py  app.py  demo.py  models.py  pyproject.toml
examples/dspy-reasoning/: .env.example  CLAUDE.md  README.md  app.py  pyproject.toml
examples/full-production/: pyproject.toml
examples/langchain-rag/: .env.example  CLAUDE.md  README.md  app.py  pyproject.toml
examples/langgraph-workflow/: .env.example  pyproject.toml
examples/llamaindex-docs/: .env.example  CLAUDE.md  README.md  app.py  pyproject.toml
examples/llamaindex-docs/data/: fastagentic.txt  llamaindex.txt  rag-overview.txt
examples/pydanticai-chat/: .env.example  README.md  agent.py  app.py  pyproject.toml
examples/semantic-kernel-chat/: .env.example  CLAUDE.md  README.md  app.py  pyproject.toml
src/fastagentic/: __init__.py  app.py  context.py  decorators.py  runner.py  types.py
tests/: test_adapters_new.py  test_app.py  test_audit.py  test_checkpoint.py  test_cli_agent.py  test_cluster.py  test_compliance.py  test_context.py  test_cost.py  test_dashboard.py  test_decorators.py  test_hitl.py  test_hooks.py  test_integrations.py  test_integrations_hooks.py  test_mcp_stdio.py  test_memory_redis.py  test_ops.py  test_policy.py  test_prompts.py  test_protocols_a2a.py  test_protocols_comprehensive.py  test_protocols_mcp.py  test_reliability.py  test_runner.py  test_sdk.py  test_sdk_client.py  test_sdk_comprehensive.py  test_server.py  test_templates.py
tests/fuzzing/: conftest.py  test_cost_fuzzing.py  test_pii_fuzzing.py  test_reliability_fuzzing.py
tests/mutation/: test_budget_mutations.py  test_policy_mutations.py  test_rbac_mutations.py
(+129 files in other folders)
