[project]
name = "autogen-coding"
version = "1.0.0"
description = "A coding assistant using AutoGen and FastAgentic"
requires-python = ">=3.10"
dependencies = [
    "fastagentic[autogen]",
    "pyautogen>=0.2.0",
]

[tool.uv.sources]
fastagentic = { path = "../..", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
