[project]
name = "dspy-reasoning"
version = "1.0.0"
description = "A reasoning agent using DSPy and FastAgentic"
requires-python = ">=3.10"
dependencies = [
    "fastagentic[dspy]",
    "dspy-ai>=2.5.0",
]

[tool.uv.sources]
fastagentic = { path = "../..", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
